tests/vdq-rta/should_fail/T24159_pat_parse_error_4.hs
{-# LANGUAGE RequiredTypeArguments #-}
module T24159_pat_parse_error_4 where

f (a => b) = ()
